# Calculator-app

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements-release.txt  requirements.txt
.github/workflows/: ci.yml  deployment.yml
release/: windows_launcher.py
src/: __init__.py  app.py  calculations.py
tests/: test_app_smoke.py  test_calculations.py
