[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "materials-calculator"
version = "0.1.0"
description = "A small Streamlit calculator for teaching CI/CD"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["streamlit>=1.40,<2.0"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
strict = true
follow_imports = "skip"
files = ["src"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.pylint.main]
py-version = "3.11"
ignore-paths = ["tests"]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.messages_control]
disable = ["duplicate-code"]

# Flake8 does not natively read pyproject.toml. Its small compatibility
# configuration therefore lives in .flake8.
